@@ -168,13 +168,16 @@ Bug Fixes
 - The ``alchemy`` scaffold would break when the database was MySQL during
   tables creation.  See https://github.com/Pylons/pyramid/pull/1049
 
-- The ``current_route_url`` method now attaches the query string to the URL by default. See
+- The ``current_route_url`` method now attaches the query string to the URL by
+  default. See
   https://github.com/Pylons/pyramid/issues/1040
 
 Backwards Incompatibilities
 ---------------------------
 
-- Modified the ``current_route_url`` method in pyramid.Request. The method previously returned the URL without the query string by default, it now does attach the query string unless it is overriden.
+- Modified the ``current_route_url`` method in pyramid.Request. The method
+  previously returned the URL without the query string by default, it now does
+  attach the query string unless it is overriden.
 
 1.4 (2012-12-18)
 ================
